<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_access_on_boarding">Akses Penuh ke Fitur yang Lebih Lengkap</string>
    <string name="text_button_on_boarding">Gabung Ke Metapedia</string>
    <string name="text_login">Masuk</string>
    <string name="text_sub_register">Dengan mendaftar disini, kamu menyetujui Syarat &amp; ketentuan serta kebijakan privasi Metapedia</string>
    <string name="text_email">Email</string>
    <string name="text_hint_email">Masukkan email kamu</string>
    <string name="text_suffix_email">Contoh: namakamu@email.com</string>
    <string name="text_hint_password">Masukkan kata sandi kamu</string>
    <string name="text_security">Kami akan melindungi datamu untuk mencegah risiko keamanan</string>
    <string name="next">Selanjutnya</string>
    <string name="text_next">Lanjut</string>
    <string name="text_register">Daftar</string>
    <string name="text_choose_account">Pilih akun untuk masuk</string>
    <string name="text_or_login">Atau masuk dengan</string>
    <string name="text_or_register">Atau daftar dengan</string>
    <string name="other_methods">Metode lain</string>
    <string name="text_google">Google</string>
    <string name="not_have_account">Belum punya akun Metapedia? Daftar</string>
    <string name="text_help">Butuh bantuan?</string>
    <string name="text_help_what">Butuh bantuan apa?</string>
    <string name="text_help_other">Butuh bantuan lain? Hubungi Metapedia Care</string>
    <string name="text_forget_password">Lupa Kata Sandi</string>
    <string name="text_recreate_password">Atur ulang kata sandi</string>
    <string name="text_info_recreate_password">Masukkan e-mail yang terdaftar. Kami akan mengirim kode verifikasi untuk atur ulang kata sandi.</string>
    <string name="text_info_new_password">Buat password yang kuat untuk akun dengan email</string>
    <string name="text_verification">Verifikasi Email</string>
    <string name="text_code_verification">Masukkan Kode Verifikasi</string>
    <string name="text_info_code_verification">Kode verifikasi telah dikirim melalui e-mail ke</string>
    <string name="text_new_password">Kata Sandi Baru</string>
    <string name="text_repeat_new_password">Ketik Ulang Kata Sandi Baru</string>
    <string name="text_char">Minimal 8 Karakter</string>
    <string name="text_information_new_password">Setelah kata sandi diubah, silahkan masuk kembali dengan kata sandi baru disemua perangkatmu</string>
    <string name="text_new_password_done">Kata sandi sudah diubah</string>
    <string name="text_info_new_password_done">Pakai kata sandimu yang baru untuk masuk lagi ke Metapedia. Jangan bagikan kata sandi ini ke siapapun ya!</string>
    <string name="text_button_new_password_done">Masuk ke Metapedia</string>
    <string name="text_appbar">Jual Beli Online Aman dan Nyaman</string>
    <string name="text_hello_user">Hai, Metapers!</string>
    <string name="text_desc_hello_user">Cek update di akunmu, yuk~</string>
    <string name="text_promo">Pilihan Promo Hari Ini</string>
    <string name="text_see_all">Lihat semua</string>
    <string name="text_cool">Yang Keren &amp; Lagi Rame</string>
    <string name="text_promo_description">Kejar Promo Fashion Pilihan</string>
    <string name="text_sk">*S&amp;K Berlaku</string>
    <string name="text_check_promo">Cek Promo</string>
    <string name="text_hint_home_search">Cari di Metapedia</string>
    <string name="text_help_me">Ada yang bisa kami bantu?</string>
    <string name="text_questions">Yang sering ditanyakan</string>
    <string name="text_metacare">Metacare</string>
    <string name="text_save_favorite">Simpan ke Favorite</string>
    <string name="text_tips">Tips &amp; Trik Pencarian</string>
    <string name="text_learn">Pelajari</string>
    <string name="text_buy">Beli</string>
    <string name="text_cart">Keranjang</string>
    <string name="text_transaction">Daftar Transaksi</string>
    <string name="text_history">Riwayat Pencarian</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_another_help">Butuh bantuan lain? Hubungi Metacare</string>
    <string name="text_for_you">Untuk Kamu</string>
    <string name="text_detail_product">Detail Produk</string>
    <string name="text_recommendation">Rekomendasi</string>
    <string name="text_condition">Kondisi</string>
    <string name="text_new">Baru</string>
    <string name="text_length_arm">Panjang Lengan</string>
    <string name="text_long_sleeve">Lengan Panjang</string>
    <string name="text_category">Kategori</string>
    <string name="text_man_shirt">Kemeja Pria</string>
    <string name="text_description_product">Deskripsi Produk</string>
    <string name="text_continue_read">Baca Selengkapnya</string>
    <string name="text_ongkir">Ongkir Reguler Rp10.000 - Rp12.000</string>
    <string name="text_maybe_you_like">Yang mungkin kamu suka</string>
    <string name="text_varian">Pilih Varian:</string>
    <string name="text_varian_size">9 ukuran pakaian</string>
    <string name="text_varian_product">Varian produk</string>
    <string name="text_color">Warna</string>
    <string name="text_size">Ukuran</string>
    <string name="text_all">Semua</string>
    <string name="text_total">Total</string>
    <string name="text_delete">Hapus</string>
    <string name="text_menu_utama">Menu</string>
    <string name="text_success_add_cart">Berhasil masuk ke keranjang!</string>
    <string name="text_my_account">Akun saya</string>
    <string name="text_setting_account">Pengaturan Akun</string>
    <string name="text_address">Daftar Alamat</string>
    <string name="text_address_description">Atur alamat pengiriman belanjaan</string>
    <string name="text_account_security">Keamanan Akun</string>
    <string name="text_account_security_description">Ubah kata sandi</string>
    <string name="text_logout">Keluar Akun</string>
    <string name="text_version">Versi 1.0.0</string>
    <string name="text_man">Pria</string>
    <string name="text_woman">Wanita</string>
    <string name="text_kids">Anak - anak</string>
    <string name="text_checkout">Pembayaran</string>
    <string name="text_checkout_header">Ini halaman terakhir dari proses belanjaanmu. Pastikan semua sudah benar, ya :)</string>
    <string name="text_product_checkout">Barang yang dibeli</string>
    <string name="text_product_shipping">Pengiriman</string>
    <string name="text_choose_checkout">Pilih Pembayaran</string>
    <string name="text_product_checkout_resume">Cek ringkasan belanjamu, yuk ~</string>
    <string name="text_edit_profile">Ubah Profil</string>
    <string name="text_name">Nama</string>
    <string name="text_username">Username</string>
    <string name="text_username_unique">Buat username yang unik</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_choose_image">Pilih gambar</string>
    <string name="text_start_shop">Mulai Belanja</string>
    <string name="text_list_cart_empty_tittle">Wah, keranjang belanjaanmu kosong</string>
    <string name="text_list_cart_empty_sub_tittle">Yuk, isi dengan barang-barang impianmu!</string>
    <string name="text_list_favorite_empty">Lagi lihat-lihat, ada barang yang kamu suka? Klik ikon hati buat simpan di favorite</string>
    <string name="text_list_transaction_empty_tittle">Kamu belum pernah bertansaksi</string>
    <string name="text_list_transaction_empty_sub_tittle">Yuk, mulai belanja dan penuhi berbagai kebutuhanmu di Metapedia.</string>
    <string name="text_list_address_empty_sub_tittle">Yuk, mari lengkapi informasi alamat rumahmu! Klik tombol dibawah ini untuk isi detail alamat guna memastikan barang-barang yang kamu suka dapat sampai dengan tepat ke tempatmu!</string>
    <string name="text_back_to_home">Kembali ke home</string>
    <string name="text_add_address">Tambah alamat</string>
    <string name="text_detail_address">Detail Alamat</string>
    <string name="text_detail_address_description">Di mana lokasi tujuan pengirimanmu?</string>
    <string name="text_recipient_name">Nama penerima</string>
    <string name="text_phone_number">Nomor Hp</string>
    <string name="text_label_address">Label Alamat</string>
    <string name="text_city">Kota &amp; Kecamatan</string>
    <string name="text_complete_address">Alamat Lengkap</string>
    <string name="text_notes_for_curir">Catatan Untuk Kurir (Opsional)</string>
    <string name="text_first_address">Jadikan Alamat Utama</string>
    <string name="text_save">Simpan</string>
    <string name="text_helper_text_address_notes">Warna rumah, patokan, pesan khusus, dll</string>
    <string name="text_history_search">Riwayat Pencarian</string>
    <string name="text_last_search">Terakhir dicari</string>
    <string name="text_delete_all">Hapus Semua</string>
    <string name="text_list_history_empty">Kamu nggak punya riwayat pencarian terakhir</string>
    <string name="text_change_address">Ubah Alamat</string>
    <string name="text_wait">Tunggu sebentar yaa</string>
    <string name="text_fullname">Nama Lengkap</string>
    <string name="text_register_with_email">Daftar dengan Email</string>
    <string name="text_password">Kata Sandi</string>
    <string name="text_email_already_exist">Email Sudah Terdaftar</string>
    <string name="text_in">Ya, Masuk</string>
    <string name="text_change">Ubah</string>
    <string name="text_logout_metapedia">Keluar dari Metapedia</string>
    <string name="text_logout_description">Apakah Anda ingin keluar?</string>
    <string name="text_cancel">Apakah Anda ingin keluar?</string>
    <string name="text_cancels">Batal</string>
    <string name="text_country">Negara</string>
    <string name="text_postal_code">Kode Pos</string>
    <string name="text_your_address">Alamat anda</string>
    <string name="text_min_order">Min. Pemesanan</string>
    <string name="text_min_order_produk">Satu Produk</string>
    <string name="text_clothing_style">Gaya Pakaian</string>
    <string name="text_polite_style">Gaya sopan</string>
    <string name="text_cover_mode">Model Penutup</string>
    <string name="text_buttoned_up">Berkancing</string>
    <string name="text_search_product">Cari Barang</string>
    <string name="text_yes_logout">Ya, Keluar</string>



</resources>