<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.forgetpassword.screen.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextSubTittle"
            android:layout_weight="1"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:textColor="@color/black"
            android:text="@string/text_appbar"/>

        <ImageView
            android:id="@+id/img_more"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/keypad"
            />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextTittle"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:textColor="@color/black"
        android:text="@string/text_recreate_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextDefault"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:textColor="@color/semi_black"
        android:text="@string/text_info_recreate_password"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/primary_color"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp10"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/text_next"
        android:layout_margin="@dimen/dp10"
        style="@style/AppTheme.TextDefault"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        app:cornerRadius="@dimen/dp10"/>

</LinearLayout>