<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.pralogin.screen.PraLoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/AppTheme.TextTittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/text_login"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/AppTheme.TextSubTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/text_register"
            android:textColor="@color/primary_color"
            android:textStyle="bold" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dp15">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:hint="@string/text_hint_email"
            app:endIconMode="clear_text"
            app:helperText="@string/text_suffix_email"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_help"
            style="@style/AppTheme.TextMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:gravity="end"
            android:text="@string/text_help"
            android:textColor="@color/primary_color"
            android:textSize="12sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/AppTheme.TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:enabled="false"
            android:padding="@dimen/dp10"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/dp10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/grey" />

            <TextView
                style="@style/AppTheme.TextMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_weight="1"
                android:text="@string/text_or_register"
                android:textAlignment="center"
                android:textColor="@color/semi_grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/grey" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_google"
            style="@style/AppTheme.TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:padding="@dimen/dp10"
            android:text="@string/other_methods"
            android:textAllCaps="false"
            android:textColor="@color/semi_black"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dp10"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp" />


        <TextView
            android:id="@+id/text"
            style="@style/AppTheme.TextMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:textAlignment="center"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>