<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/dp15"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logout_metapedia"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sub_tittle"
            style="@style/AppTheme.TextDefaultMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logout_description"
            android:layout_marginTop="@dimen/dp10"
            android:textAlignment="center"
            android:textColor="@color/semi_black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/close"
                style="@style/AppTheme.TextDefaultMini"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_cancels"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/semi_black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/AppTheme.TextDefaultMini"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp10"
                android:text="@string/text_yes_logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="@dimen/dp10" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>